--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">SportsSideKick</string>
+
+
+    <!-- Login scree -->
+    <string name="login_sign_up">Sign up</string>
+    <string name="login_login">Log in</string>
+
 </resources>
