--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <!-- Login scree -->
     <string name="login_sign_up">Sign up</string>
     <string name="login_login">Log in</string>
-
+    <string name="login_slider_text_1">Bringing fans together</string>
+    <string name="login_slider_text_2">Coming soon</string>
 
     <string name="wall_fragment_caption">Wall</string>
     <string name="video_chat_fragment_caption">Video Chat</string>
