SignUp fragment, UserInfo, Firebase - create user. Merge

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="sign_up_phone">Phone</string>
     <string name="sign_up_passwoed">Password</string>
     <string name="sign_up_sign_up">Sign up</string>
-    <string name="sign_up_text">By singing up, you are agree to SportsSidekick s Terms and Conditions of Use amd Privacy Polocy.</string>
+    <string name="sign_up_text">By singing up, you are agree to SportsSidekick s Terms and Conditions of Use and Privacy Policy.</string>
 
     <string name="dialog_ok">Ok</string>
     <string name="dialog_warning">Warning</string>
