Chat info and participants count linked.  Image collage loading for chat icons.  Displaying of multimedia content in chat - image and audio.  Animation and transition from grid to list view for chat list.  IM Model refactoring to evade race conditions.

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="quiz_url">https://snack-media.com/sidekick/quiz-list-en.html</string>
     <string name="leaderboard_url">https://snack-media.com/sidekick/leaderboard-en.html</string>
     <string name="days">" Days "</string>
+    <string name="no_message_text">No one has started chatting yet! Why not be the first?</string>
 
     <plurals name="days_until_match">
         <item quantity="zero">TODAY</item>
