--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -105,6 +105,14 @@
     <string name="your_friends_request">Friend requests</string>
     <string name="time_info_player">%1$tM:%1$tS / %2$tM:%2$tS</string>
 
+    <!-- video chat -->
+    <string name="video_chat_text_1">Watch the match with your <font color="#c3ff01">friends.</font></string>
+    <string name="video_chat_text_2">Video chat allows you yo call up to 3 friends for group video chat, so you can experience the action with the poeple you love wherever you are!</string>
+    <string name="video_chat_button_text">Being your call</string>
+    <string name="starting_new_call_search_hint">Search public chats</string>
+    <string name="starting_new_call_search_title">Starting New Call</string>
+
+
     <plurals name="days_until_match">
         <item quantity="zero">TODAY</item>
         <item quantity="one">%d Day</item>
