--- a/SportsSideKick/app/src/main/res/values-zh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-zh/strings.xml
@@ -1,31 +1,115 @@
 <resources>
-    <string name="app_name">SportsSideKick</string>
+    <string name="friend_requests">Friend Requests</string>
 
-    <string name="wall_fragment_caption">Wall</string>
-    <string name="video_chat_fragment_caption">Video Chat</string>
-    <string name="news_fragment_caption">News</string>
-    <string name="rumors_fragment_caption">Rumors</string>
-    <string name="shop_fragment_caption">Shop</string>
+    <!-- Login scree -->
+    <string name="terms_and_conditions">http://www.sortdirectkick.tv/terms</string>
+    <string name="login_sign_up">注册</string>
+    <string name="login_login">登录</string>
+    <string name="login_slider_text_1">Bringing fans together</string>
+    <string name="login_slider_text_2">Coming soon</string>
+    <string name="login_login_email">电子邮件</string>
+    <string name="login_login_password">密码</string>
+    <string name="login_login_login">登录</string>
+    <string name="login_login_forgot_text">忘记密码？</string>
+    <string name="login_login_message_login_failed">登录失败！</string>
+    <string name="login_login_message_authentication_failed">请重新输入您的密码，然后再试。</string>
+    <string name="forgot_password_text">重置您的密码</string>
+    <string name="forgot_password_button_text">重置密码</string>
+    <string name="sign_up_facebook">用 Facebook 注册</string>
+    <string name="sign_up_or">或者</string>
+    <string name="sign_up_firstname">名字</string>
+    <string name="sign_up_lastname">姓氏</string>
+    <string name="sign_up_username">用户名</string>
+    <string name="sign_up_email">电子邮件</string>
+    <string name="sign_up_phone">电话</string>
+    <string name="sign_up_passwoed">密码</string>
+    <string name="sign_up_sign_up">注册</string>
+    <string name="sign_up_text">By singing up, you are agree to SportsSidekick\'"s <font color="@android:color/white"> Terms and Conditions of Use </font> and <font color="@android:color/white">Privacy Policy.</font></string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="club_radio_caption">Club Radio</string>
+    <string name="dialog_ok">确定</string>
+    <string name="dialog_warning">Warning</string>
+    <string name="dialog_message">You must enter your </string>
+    <string name="dialog_message_not_valid_email">请输入有效的电子邮件地址！</string>
+    <string name="dialog_interner_connection_falied">您需要连接到互联网，才能使用 使用 Sports Sidekick</string>
+    <string name="dialog_message_facebook_error">无法收到您的公开个人资料。请再试一次！</string>
+
+    <string name="wall_fragment_caption">墙</string>
+    <string name="video_chat_fragment_caption">视频聊天</string>
+    <string name="news_fragment_caption">新闻</string>
+    <string name="rumors_fragment_caption">传言</string>
+    <string name="shop_fragment_caption">商店</string>
+
+    <string name="club_radio_caption">俱乐部电台</string>
     <string name="sporting_cp_title">Sporting CP</string>
     <string name="demo">demo</string>
-    <string name="club_tv_caption">Club TV</string>
-    <string name="fantasy_caption">Fantasy</string>
-    <string name="statistics_caption">Statistics</string>
-    <string name="chat_caption">Chat</string>
-    <string name="shop_caption">Shop</string>
-    <string name="rumours_caption">Rumours</string>
-    <string name="video_chat_caption">Video Chat</string>
-    <string name="wall_caption">Wall</string>
+    <string name="club_tv_caption">俱乐部电视</string>
+    <string name="fantasy_caption">幻想</string>
+    <string name="statistics_caption">统计数据</string>
+    <string name="chat_caption">聊天</string>
+    <string name="shop_caption">商店</string>
+    <string name="rumours_caption">传言</string>
+    <string name="video_chat_caption">视频聊天</string>
+    <string name="wall_caption">墙</string>
     <string name="scrolling_news_demo_value">Sporting CP pens deal with FHK</string>
-    <string name="news_caption">News</string>
-    <string name="quiz_caption">Quiz</string>
+    <string name="news_caption">新闻</string>
+    <string name="quiz_caption">迷题</string>
+    <string name="coins_caption">你拥有</string>
 
     <!-- URLs for store, fantasy, quiz -->
     <string name="store_url">"http://lojaverde.sporting.cn</string>
     <string name="fantasy_url">https://www.fanfeud.co.uk/client/clients/</string>
     <string name="quiz_url">https://snack-media.com/sidekick/quiz-list-cn.html</string>
     <string name="leaderboard_url">https://snack-media.com/sidekick/leaderboard-cn.html</string>
+    <string name="days">" 天 "</string>
+    <string name="no_message_text">还没人开始聊天！为何不率先创建？</string>
+    <string name="permission_microphone_rationale">Please enable microphone in order to send voice message.</string>
+    <string name="button_allow">Allow</string>
+    <string name="button_deny">Deny</string>
+    <string name="permission_microphone_denied">You need to enable micrphone in settings to send audio messages.</string>
+    <string name="permission_microphone_neverask">Never ask for audio recording permission again.</string>
+
+    <string name="this_chat_is_public">this_chat_is_public</string>
+    <string name="this_chat_is_private">this_chat_is_private</string>
+    <string name="manage_public_chat_caption">manage_public_chat_caption</string>
+    <string name="create_chat">创建新聊天</string>
+    <string name="join_chat">加入聊天</string>
+    <string name="your_stash">您的宝藏</string>
+    <string name="your_wallet">Your Wallet -</string>
+    <string name="your_profile">您的个人资料</string>
+    <string name="contact_info">联系方式</string>
+    <string name="subscribed_since">初次订阅时间：</string>
+    <string name="location_caption">地址</string>
+    <string name="password_caption">密码</string>
+    <string name="image">image</string>
+    <string name="chosen_language">已选语言</string>
+    <string name="your_statement">Your Statement</string>
+    <string name="choose_your_language">选择您的语言</string>
+    <string name="english">English</string>
+    <string name="chinese">Chinese</string>
+    <string name="portuguese">Portugese</string>
+    <string name="friend_profile">好友信息</string>
+    <string name="member_since">Member since</string>
+    <string name="follows_you">关注您</string>
+    <string name="following_member">Following member</string>
+
+    <!-- your friends-->
+    <string name="your_friends_title">您的朋友</string>
+    <string name="your_friends_search_hint">搜索您的朋友</string>
+    <string name="your_friends_request">交友请求</string>
+    <string name="time_info_player">%1$tM:%1$tS / %2$tM:%2$tS</string>
+
+    <!-- video chat -->
+    <string name="video_chat_text_1">Watch the match with your <font color="#c3ff01">friends.</font></string>
+    <string name="video_chat_text_2">Video chat allows you yo call up to 3 friends for group video chat, so you can experience the action with the poeple you love wherever you are!</string>
+    <string name="video_chat_button_text">开始您的呼叫</string>
+    <string name="starting_new_call_search_hint">搜索公共聊天室</string>
+    <string name="starting_new_call_search_title">正在开始新呼叫</string>
+
+
+    <plurals name="days_until_match">
+        <item quantity="zero">TODAY</item>
+        <item quantity="one">%d 天</item>
+        <item quantity="other">%d 天</item>
+    </plurals>
+
 </resources>
