--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -10,19 +10,19 @@
     <!-- Login scree -->
     <string name="terms_and_conditions">http://www.sortdirectkick.tv/terms</string>
     <string name="login_sign_up">Sign up</string>
-    <string name="login_login">Log in</string>
+    <string name="login_login">Log In</string>
     <string name="login_slider_text_1">Bringing fans together</string>
     <string name="login_slider_text_2">Coming soon</string>
     <string name="login_login_email">Email</string>
     <string name="login_login_password">Password</string>
     <string name="login_login_login">Login</string>
-    <string name="login_login_forgot_text">Forgot your password?</string>
+    <string name="login_login_forgot_text">Forgot?</string>
     <string name="login_login_message_login_failed">Login failed. Try again later!</string>
     <string name="login_login_message_authentication_failed">Login failed. Check user name and password!</string>
     <string name="forgot_password_text">Reset your password</string>
     <string name="forgot_password_button_text">Reset Password</string>
     <string name="sign_up_facebook">Sign up with Facebook</string>
-    <string name="sign_up_or">OR</string>
+    <string name="sign_up_or">or</string>
     <string name="sign_up_firstname">First name</string>
     <string name="sign_up_lastname">Last name</string>
     <string name="sign_up_username">User name</string>
