--- a/SportsSideKick/app/src/main/res/values-zh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-zh/strings.xml
@@ -104,6 +104,7 @@
     <string name="video_chat_button_text">开始您的呼叫</string>
     <string name="starting_new_call_search_hint">搜索公共聊天室</string>
     <string name="starting_new_call_search_title">正在开始新呼叫</string>
+    <string name="member_info">Member info</string>
 
 
     <plurals name="days_until_match">
