--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -118,6 +118,7 @@
     <string name="nickname">Nickname</string>
     <string name="email_address">Email Address</string>
     <string name="telephone_no">Telephone No</string>
+    <string name="member_info">Member info</string>
 
 
     <plurals name="days_until_match">
