--- a/SportsSideKick/app/src/main/res/values-de/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-de/strings.xml
@@ -219,6 +219,7 @@
     <string name="tip_13_end">You can Navigate back and forward using the menu at the bottom of the Shop module.</string>
     <string name="tip_13_step_1">Open the Shop module by tapping the Shop tab on the top left of the screen.</string>
     <string name="tip_13_step_2">You can Navigate back and forward using the menu at the bottom of the Shop module.</string>
+    <string name="share_using">Share with:</string>
 
 
 </resources>
