--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -229,4 +229,8 @@
     <string name="tip_13_step_2">You can Navigate back and forward using the menu at the bottom of the Shop module.</string>
     <string name="share_using">Share with:</string>
 
+
+    <string name="permission_camera_denied">You need to enable camera in settings to take image.</string>
+    <string name="permission_camera_neverask">Never ask for camera permission again.</string>
+    <string name="permission_camera_rationale">Please enable camera in order to take image.</string>
 </resources>
