--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -228,6 +228,7 @@
     <string name="tip_13_step_1">Open the Shop module by tapping the Shop tab on the top left of the screen.</string>
     <string name="tip_13_step_2">You can Navigate back and forward using the menu at the bottom of the Shop module.</string>
     <string name="share_using">Share with:</string>
+    <string name="enter_comment_hint">Enter a comment ...</string>
 
     <string name="video_chat_permission_microphone_and_camera_rationale">Please enable microphone and camera in order to use video chat.</string>
     <string name="video_chat_permission_microphone_and_camera_denied">You need to enable microphone and camera in settings to use video chat</string>
