--- a/SportsSideKick/app/src/main/res/values-zh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-zh/strings.xml
@@ -100,7 +100,7 @@
 
     <!-- video chat -->
     <string name="video_chat_text_1">Watch the match with your <font color="#c3ff01">friends.</font></string>
-    <string name="video_chat_text_2">Video chat allows you yo call up to 3 friends for group video chat, so you can experience the action with the poeple you love wherever you are!</string>
+    <string name="video_chat_text_2">Video chat allows you to call up to 3 friends for group video chat, so you can experience the action with the poeple you love wherever you are!</string>
     <string name="video_chat_button_text">开始您的呼叫</string>
     <string name="starting_new_call_search_hint">搜索公共聊天室</string>
     <string name="starting_new_call_search_title">正在开始新呼叫</string>
