--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="facebook_app_id">102782376855276</string>
     <string name="fb_login_protocol_scheme">fb11111111111111</string>
 
-    <!-- Login scree -->
+    <!-- Login screen -->
     <string name="terms_and_conditions">http://www.sortdirectkick.tv/terms</string>
     <string name="login_sign_up">Sign up</string>
     <string name="login_login">Log In</string>
@@ -229,6 +229,7 @@
     <string name="tip_13_step_2">You can Navigate back and forward using the menu at the bottom of the Shop module.</string>
     <string name="share_using">Share with:</string>
     <string name="enter_comment_hint">Enter a comment ...</string>
+    <string name="tutorial_step">STEP</string>
 
     <string name="video_chat_permission_microphone_and_camera_rationale">Please enable microphone and camera in order to use video chat.</string>
     <string name="video_chat_permission_microphone_and_camera_denied">You need to enable microphone and camera in settings to use video chat</string>
@@ -237,4 +238,109 @@
     <string name="permission_camera_denied">You need to enable camera in settings to take image.</string>
     <string name="permission_camera_neverask">Never ask for camera permission again.</string>
     <string name="permission_camera_rationale">Please enable camera in order to take image.</string>
+
+    <string name="chat_join_group">Join Group</string>
+    <string name="chat_already_in_group">You are already in group</string>
+    <string name="chat_members">Membersp</string>
+    <string name="chat_edit">Edit</string>
+    <string name="chat_Leave">Leave</string>
+    <string name="chat_send">SEND</string>
+    <string name="chat_image_downloaded">Image is downloaded.</string>
+    <string name="chat_video_downloaded">Video is downloaded.</string>
+    <string name="are_you_sure">ARE YOU SURE?</string>
+    <string name="chat_leave_chat">You will leave this chat</string>
+    <string name="choose">Choose</string>
+    <string name="chat_image_or_video">\"Take photo or record video?</string>
+    <string name="chat_video">Video</string>
+    <string name="chat_image">Image</string>
+    <string name="chat_hold">Hold down to record</string>
+    <string name="chat_recording_stop">Recording stopped</string>
+    <string name="news_install_twitter">Please install Twitter application.</string>
+    <string name="news_post_to_wall_title">Post this to your wall?</string>
+    <string name="news_post_to_wall_message">Would you like to post this on your wall?</string>
+    <string name="video_chat_maximum">Sorry you can only video call with a maximum of 3 friends, and this call is already full!</string>
+    <string name="video_chat_you">You</string>
+    <string name="video_chat_receive_call">Receiving a call from</string>
+    <string name="video_chat_accpet_call">Accept the call?</string>
+    <string name="permissions">Permissions</string>
+    <string name="wall_new_post_title">Not sure we need title here</string>
+    <string name="wall_new_post_subtitle">A subtitle...</string>
+    <string name="wall_text_for_post">Please enter some text for post!</string>
+    <string name="chat_frends_in_chat">Friends in Chat</string>
+    <string name="chat_frend_in_chat">1 Friend in Chat</string>
+    <string name="chat_choose_option">Choose option</string>
+    <string name="chat_choose_from_library">Choose from lilrary</string>
+    <string name="chat_use_camera">Use Camera</string>
+    <string name="chat_no_changes">There are no changes in this chat.</string>
+    <string name="try_again_latter">Error. Try again later.</string>
+    <string name="enter_friend_name_invite">Enter friend name to invite.</string>
+    <string name="enter_valid_password_and_display_name">Please enter valid password and displayName!</string>
+    <string name="login_try_again">Please re-enter your password and try again</string>
+    <string name="remove_friend">REMOVE FRIEND</string>
+    <string name="friend_reqest">SEND FRIEND REQUEST</string>
+    <string name="friend_unfollow">UN-FOLLOW</string>
+    <string name="friend_follow">FOLLOW</string>
+    <string name="fiil_all_data">You have to fill all data</string>
+    <string name="registarion_error">Registration error. Try again later.</string>
+    <string name="no_users_selected">No users selected!</string>
+    <string name="no_users_selected_message">You haven\'t selected anyone to call!</string>
+    <string name="logout_from_app">\"This will log you out of the app!</string>
+    <string name="reset_app">This will reset the app!</string>
+    <string name="caps_level">Caps level</string>
+    <string name="days_using">Days using SSK</string>
+    <string name="friends">Friends</string>
+    <string name="following">Following</string>
+    <string name="followers">Followers</string>
+    <string name="wall_posts">Wall posts</string>
+    <string name="videos_watched">Videos watched</string>
+    <string name="chats">Chats</string>
+    <string name="video_chats">Video chats</string>
+    <string name="public_chats">Public chats</string>
+    <string name="matches_attended_home">Matches attended (home)</string>
+    <string name="matches_attended_away">Matches attended (away)</string>
+    <string name="likes_received">Likes received</string>
+    <string name="comments_made">Comments made</string>
+    <string name="up_next">UP NEXT</string>
+    <string name="live">LIVE</string>
+    <string name="tutorial_earn">Tap here to earn 5 SSK for viewing this How to!</string>
+    <string name="add_users">ADD USERS</string>
+    <string name="playlist">PLAYLIST</string>
+    <string name="default_time">00:00 / 00:00</string>
+    <string name="write_post_hint">Write your post here.</string>
+    <string name="user">User</string>
+    <string name="stats">Stats</string>
+    <string name="store">Store</string>
+    <string name="search_wall_posts_hint">Search Wall Posts</string>
+    <string name="requested_on">Requested on</string>
+    <string name="you">You</string>
+    <string name="add_friend">Add a friend</string>
+    <string name="invite_friend">Invite a friend</string>
+    <string name="add_friend_hint">Enter friend\'s name, email or phone number.</string>
+    <string name="chat_name">Chat name</string>
+    <string name="your_chat_name">Enter a name for your chat</string>
+    <string name="add_friends_to_chat">Add friends to chat</string>
+    <string name="search_for_member">Search for a member</string>
+    <string name="friends_in_chat">Friends in Chat</string>
+    <string name="edit_chat">Edit Chat</string>
+    <string name="group_chat_name">Enter a name for your Group Chat</string>
+    <string name="delete">Delete</string>
+    <string name="save">Save</string>
+    <string name="invite">Invite</string>
+    <string name="search_public_chats">Search Public Chats</string>
+    <string name="public_chats_your_friends_are_in">Public Chats your friends are in</string>
+    <string name="rename_your_chat">Rename your chat</string>
+    <string name="new_name_of_chat_hint">Enter new name of chat here</string>
+    <string name="people_in_this_chat">People in this chat</string>
+    <string name="select_friends_to_call">Select friends to call</string>
+    <string name="friends_you_are_following">Friends you are following:</string>
+    <string name="no_friends">No friends</string>
+    <string name="follow_more">Follow More</string>
+    <string name="friends_following_you">Friends following you:</string>
+    <string name="no_result">No results</string>
+    <string name="login_or_sign_up">Login / Signup</string>
+    <string name="rewards_and_items_received">Rewards and items recieved from Gym Bags</string>
+    <string name="you_have">YOU HAVE</string>
+    <string name="bonus_gym_bag">+ BONUS GYM BAG</string>
+    <string name="bandles">$$K BUNDLES</string>
+
 </resources>
