Forgott password, quiz

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="login_login_message_authentication_failed">Login failed. Check user name and password!</string>
     <string name="forgot_password_text">Reset your password</string>
     <string name="forgot_password_button_text">Reset Password</string>
+    <string name="forgot_password_message">Please check your email for password reset options.</string>
+    <string name="forgot_password_error_message">Please enter a valid email address!</string>
+    <string name="forgot_password_error">Error</string>
     <string name="sign_up_facebook">Sign up with Facebook</string>
     <string name="sign_up_or">or</string>
     <string name="sign_up_firstname">First name</string>
