add multi screen phone support. 5 dimens file add for x, xx, xxx, hdpi and mdpi,

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -393,4 +393,6 @@
         <item>Video Chat</item>
         <item>Menu 10</item>
     </string-array>
+
+    <string name="go_to_profile">Go to Profile ></string>
 </resources>
