In popup friends fragment add Official Account list.

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -398,4 +398,5 @@
     <string name="find">Find</string>
     <string name="request">Request</string>
     <string name="official_accounts">Official Accounts</string>
+    <string name="back">Back</string>
 </resources>
