--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -108,7 +108,7 @@
     <string name="time_info_player">%1$tM:%1$tS / %2$tM:%2$tS</string>
 
     <!-- video chat -->
-    <string name="video_chat_text_1">Watch the match with your <font color="#c3ff01">friends.</font></string>
+    <string name="video_chat_text_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>
     <string name="video_chat_text_2">Video chat allows you to call up to 3 friends for group video chat, so you can experience the action with the poeple you love wherever you are!</string>
     <string name="video_chat_button_text">Begin your call</string>
     <string name="starting_new_call_search_hint">Search public chats</string>
@@ -304,7 +304,7 @@
     <string name="comments_made">Comments made</string>
     <string name="up_next">UP NEXT</string>
     <string name="live">LIVE</string>
-    <string name="tutorial_earn">Tap here to earn 5 SSK for viewing this How to!</string>
+    <string name="tutorial_earn">Tap here to earn 5 $$K for viewing this How to!</string>
     <string name="add_users">ADD USERS</string>
     <string name="playlist">PLAYLIST</string>
     <string name="default_time">00:00 / 00:00</string>
