--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -425,5 +425,18 @@
     <string name="add_friends_to_chat_phone">Add friends to \'Unnamed Chat\'</string>
     <string name="this_chat_is_public_phone">This chat is PUBLIC</string>
     <string name="this_chat_is_private_phone">This chat is PRIVATE</string>
-
+    <string name="user_profile">User Profile</string>
+    <string name="video_chat">Video Chat</string>
+    <string name="chat">Chat</string>
+    <string name="play_game">Play Game</string>
+    <string name="more">More</string>
+    <string name="pinned">Pinned</string>
+    <string name="comments">Comments</string>
+    <string name="friend_you_and">Friend you and</string>
+    <string name="have_in_common">have in common</string>
+    <string name="public_chats_profile">Public Chats</string>
+    <string name="is_in">is in</string>
+    <string name="what_would_you_like_to_do">What would you like to do?</string>
+    <string name="report_abuse">Report Abuse</string>
+    <string name="cancel">Cancel</string>
 </resources>
