Language Fragment ,optimize for telephone

--- a/SportsSideKick/app/src/sportsidekick/res/values-de/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values-de/strings.xml
@@ -4,7 +4,7 @@
     <string name="friend_requests">Freundschaftsanfragen</string>
 
     <string name="app_name">SportsSideKick</string>
-
+    <string name="this_language">German</string>
 
     <!-- Login scree -->
     <string name="terms_and_conditions">http://www.sortdirectkick.tv/terms</string>
