--- a/SportsSideKick/app/src/sportsidekick/res/values-fr/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values-fr/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="this_language">French</string>
     <!--<string name="friend_requests">Demandes d'ami</string>-->
     <!--<string name="app_name">SportsSideKick</string>-->
 
