--- a/SportsSideKick/app/src/sportsidekick/res/values-pt/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values-pt/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SportsSideKick</string>
-
+    <string name="this_language">Polish</string>
     <string name="wall_fragment_caption">Wall</string>
     <string name="video_chat_fragment_caption">Video Chat</string>
     <string name="news_fragment_caption">News</string>
