--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="friend_requests">Friend Requests</string>
-
+    <string name="this_language">English</string>
     <string name="app_name">Sidekick</string>
     <string name="facebook_app_id">102782376855276</string>
     <string name="fb_login_protocol_scheme">fb11111111111111</string>
@@ -445,4 +445,18 @@
     <string name="friends_in_video_chat">Friends in Video Chat</string>
     <string name="friend_in_video_chat">1 Friend in Video Chat</string>
     <string name="search_your_friends">Search your friends</string>
+
+    <string-array name="language_names">
+        <item>Bengali</item>
+        <item>Chinese</item>
+        <item>English</item>
+        <item>French</item>
+        <item>German</item>
+        <item>Indonesian</item>
+        <item>Italian</item>
+        <item>Polish</item>
+        <item>Portuguese</item>
+        <item>Russian</item>
+        <item>Spanish</item>
+    </string-array>
 </resources>
