--- a/SportsSideKick/app/src/sportsidekick/res/values-zh/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values-zh/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="friend_requests">Friend Requests</string>
-
+    <string name="this_language">Chinese</string>
     <!-- Login scree -->
     <string name="terms_and_conditions">http://www.sortdirectkick.tv/terms</string>
     <string name="login_sign_up">注册</string>
