--- a/SportsSideKick/app/src/sportsidekick/res/values-id/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values-id/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="friend_requests">Friend Requests</string>
-
+    <string name="this_language">Indonesian</string>
     <string name="app_name">Sidekick</string>
     <string name="facebook_app_id">102782376855276</string>
     <string name="fb_login_protocol_scheme">fb11111111111111</string>
