--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -275,10 +275,10 @@
     <string name="enter_friend_name_invite">Enter friend name to invite.</string>
     <string name="enter_valid_password_and_display_name">Please enter valid password and displayName!</string>
     <string name="login_try_again">Please re-enter your password and try again</string>
-    <string name="remove_friend">REMOVE FRIEND</string>
-    <string name="friend_reqest">SEND FRIEND REQUEST</string>
-    <string name="friend_unfollow">UN-FOLLOW</string>
-    <string name="friend_follow">FOLLOW</string>
+    <string name="remove_friend">Un-Friend</string>
+    <string name="friend_reqest">Send Friend Request</string>
+    <string name="friend_unfollow">Un-Follow Friend</string>
+    <string name="friend_follow">Follow Friend</string>
     <string name="fiil_all_data">You have to fill all data</string>
     <string name="registarion_error">Registration error. Try again later.</string>
     <string name="no_users_selected">No users selected!</string>
@@ -459,5 +459,6 @@
     <string name="last_chat">Last Chat</string>
 
     <string name="mins_ago">mins ago</string>
+    <string name="friend_request_pending">Friend Request Pending</string>
 
 </resources>
