--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="login_sign_up">Sign up</string>
     <string name="login_login">Login</string>
     <string name="login_slider_text_1">Bringing fans together</string>
-    <string name="login_slider_text_1_phone">Bringing <font color="#c3ff01"> fans </font> together</string>
+    <string name="login_slider_text_1_phone">Bringing <font color="#c3ff01"> Fans </font> Together</string>
     <string name="login_slider_text_2">Coming soon</string>
     <string name="login_login_email">Email</string>
     <string name="login_login_password">Password</string>
