--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="login_sign_up">Sign up</string>
     <string name="login_login">Login</string>
     <string name="login_slider_text_1">Bringing fans together</string>
-    <string name="login_slider_text_1_phone">Bringing <font color="#c3ff01"> Fans </font> Together</string>
+    <string name="login_slider_text_1_phone"><![CDATA[ Bringing <font color="#c3ff01"> Fans </font> Together</font>]]></string>
     <string name="login_slider_text_2">Coming soon</string>
     <string name="login_login_email">Email</string>
     <string name="login_login_password">Password</string>
@@ -104,7 +104,7 @@
 
     <!-- video chat -->
     <string name="video_chat_text_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>
-    <string name="video_chat_text_1_phone">Watch the match with your <font color="#c3ff01"> friends. </font></string>
+    <string name="video_chat_text_1_phone"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>
     <string name="video_chat_text_2">Video chat allows you to call up to 3 friends for group video chat, so you can experience the action with the poeple you love wherever you are!</string>
     <string name="video_chat_button_text">Begin your call</string>
     <string name="starting_new_call_search_hint">Search public chats</string>
