--- a/SportsSideKick/app/src/sportsidekick/res/values-id/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values-id/strings.xml
@@ -267,7 +267,7 @@
     <string name="chat_frends_in_chat">Friends in Chat</string>
     <string name="chat_frend_in_chat">1 Friend in Chat</string>
     <string name="chat_choose_option">Choose option</string>
-    <string name="chat_choose_from_library">Choose from lilrary</string>
+    <string name="chat_choose_from_library">Choose from library</string>
     <string name="chat_use_camera">Use Camera</string>
     <string name="chat_no_changes">There are no changes in this chat.</string>
     <string name="try_again_latter">Error. Try again later.</string>
